--- a/examples/style.css
+++ b/examples/style.css
@@ -1,25 +1,22 @@
 html,
 body {
   margin: 0;
+  width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 #map, #main {
-  width: 100%;
-  height: 100vh;
-}
-
-#example {
-  width: 50%;
+  height: 99vh;
 }
 
 #text {
-  width: 40vw;
-  height: 100vh;
-  overflow: scroll;
+  overflow: auto;
+  margin-right: 1rem;
+  height: 99vh;
 }
 
 .menu {
-  width: 12rem;
-  height: 100vh;
+  width: 10rem;
+  height: 99vh;
 }
